--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "proxy": "http://localhost:8888",
   "dependencies": {
+    "@auth-kit/react-router": "^3.1.3",
     "@headlessui/react": "^2.1.0",
     "@heroicons/react": "^2.1.4",
     "@testing-library/jest-dom": "^5.17.0",
