--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,11 +13,14 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.101",
     "@types/react": "^18.3.3",
+    "@types/react-bootstrap": "^0.32.36",
     "@types/react-dom": "^18.3.0",
     "axios": "^1.7.2",
+    "bootstrap": "^5.3.3",
     "formik": "^2.4.6",
     "react": "^18.3.1",
     "react-auth-kit": "^3.1.3",
+    "react-bootstrap": "^2.10.3",
     "react-dom": "^18.3.1",
     "react-router": "^6.24.0",
     "react-router-dom": "^6.24.0",
