--- a/backend/package.json
+++ b/backend/package.json
@@ -18,11 +18,13 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/node": "^20.14.9",
+    "@types/uuid": "^10.0.0",
     "nodemon": "^3.1.4",
     "typescript": "^5.5.2"
   }
