--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "react-scripts": "5.0.1",
     "tw-elements": "^2.0.0",
     "typescript": "^4.9.5",
+    "uuid": "^10.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -55,6 +56,8 @@
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/uuid": "^10.0.0",
     "tailwindcss": "^3.4.4"
   }
 }
