--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "react-router": "^6.24.0",
     "react-router-dom": "^6.24.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.5",
     "tw-elements": "^2.0.0",
     "typescript": "^4.9.5",
     "uuid": "^10.0.0",
