--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.5",
     "tw-elements": "^2.0.0",
+    "tw-elements-react": "^1.0.0-alpha-end",
     "typescript": "^4.9.5",
     "uuid": "^10.0.0",
     "web-vitals": "^2.1.4"
