--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-auth-kit": "^3.1.3",
     "react-bootstrap": "^2.10.3",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
     "react-router": "^6.24.0",
     "react-router-dom": "^6.24.0",
     "react-scripts": "5.0.1",
