--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "json-server": "^1.0.0-beta.1",
     "jsonwebtoken": "^9.0.2",
     "ts-node": "^10.9.2",
     "uuid": "^10.0.0"
