--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@auth-kit/react-router": "^3.1.3",
     "@headlessui/react": "^2.1.0",
     "@heroicons/react": "^2.1.4",
+    "@reduxjs/toolkit": "^2.2.6",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -23,6 +24,7 @@
     "react-bootstrap": "^2.10.3",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-redux": "^9.1.2",
     "react-router": "^6.24.0",
     "react-router-dom": "^6.24.0",
     "react-scripts": "5.0.1",
