--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@types/react-dom": "^18.3.0",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
+    "browser-image-compression": "^2.0.2",
     "formik": "^2.4.6",
     "react": "^18.3.1",
     "react-auth-kit": "^3.1.3",
